[ALIEN-3501] replace code related to consul-publisher with code related to portal-publisher